--- a/themes/meghna-hugo/layouts/partials/contact.html
+++ b/themes/meghna-hugo/layouts/partials/contact.html
@@ -29,31 +29,13 @@
 
             {{"<!-- Contact Form -->" | safeHTML}}
             <div class="col-lg-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                <form id="contact-form" class="form-meghna" method="post" action="sendmail.php" role="form">
-
-                    <input name="e-mail" type="text" id="e-mail" autocomplete="off">
-                    <div class="form-group">
-                        <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
-                    </div>
-                    <div class="form-group">
-                        <input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
-                    </div>
-                    <div class="form-group">
-                        <textarea rows="6" placeholder="Message" class="form-control" name="message"
-                            id="message"></textarea>
-                    </div>
-                    <div id="mail-success" class="success">
-                        Thank you. The Mailman is on His Way :)
-                    </div>
-                    <div id="mail-fail" class="error">
-                        Sorry, don't know what happened. Try later :(
-                    </div>
-                    <div id="cf-submit">
-                        <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
-                    </div>
+                <div class="social-icon">
+                    <ul class="list-inline">
+                        {{ range .Site.Data.contact.socialIcons }}
+                        <li class="list-inline-item"><a href="{{ .url }}"><i class="{{ .icon }}"></i></a></li>
+                        {{ end }}
+                    </ul>
+                </div>
                 </form>
             </div>
         </div>
