spelling social and blank maps

--- a/themes/meghna-hugo/layouts/partials/about.html
+++ b/themes/meghna-hugo/layouts/partials/about.html
@@ -50,7 +50,7 @@
                         {{ range .Site.Data.about2.aboutItem }}
                         <div class="col-lg-6">
                             <div class="media">
-                                <div class="align-self-start mr-3">
+                                <div class="align-self-start mr-3" style="width:30px;margin-right:10px;">
                                     {{with .icon}} <i class="{{ . }}"></i> {{ end }}
                                 </div>
                                 <div class="media-body">
