--- a/themes/meghna-hugo/layouts/partials/hero-area.html
+++ b/themes/meghna-hugo/layouts/partials/hero-area.html
@@ -3,9 +3,7 @@
 <section class="hero-area" style='background-image: url("{{ .Site.Params.banner.bgImage | absURL }}");'>
     <div class="block">
         {{with .Site.Params.banner.icon}}
-        <div class="video-button">
-            <i class="{{ . }}"></i>
-        </div>
+            <img width="300" src="{{ . }}" alt="Logo" />
         {{ end }}
        {{with .Site.Params.banner.heading}} <h1>{{ . }}</h1>{{ end }}
        {{with .Site.Params.banner.content}} <p>{{ . }}</p> {{ end }}
